--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -1,10 +1,7 @@
 <!-- image -->
 <figure {{ with .Get "class" }}class="{{.}}"{{ end }}>
     {{ with .Get "link"}}<a href="{{.}}">{{ end }}
-        <img src="/images/{{ .Get "src" }}-256.{{ .Get "type" }}" data-sizes="auto" data-srcset="/images/{{ .Get "src" }}-256.{{ .Get "type" }} 256w,/images/{{ .Get "src" }}-360.{{ .Get "type" }} 360w,/images/{{ .Get "src" }}-512.{{ .Get "type" }} 512w,/images/{{ .Get "src" }}-640.{{ .Get "type" }} 640w,/images/{{ .Get "src" }}-768.{{ .Get "type" }} 768w,/images/{{ .Get "src" }}-1024.{{ .Get "type" }} 1024w,/images/{{ .Get "src" }}-1366.{{ .Get "type" }} 1366w,/images/{{ .Get "src" }}-1600.{{ .Get "type" }} 1600w,/images/{{ .Get "src" }}-1920.{{ .Get "type" }} 1920w" {{ with .Get "width" }}width="{{.}}" {{ end }} style="border:1px solid indigo" class="lazyload" />
-        <noscript>
-          <img src="/images/{{ .Get "src" }}-512.{{ .Get "type" }}" {{ if or (.Get "alt") (.Get "caption") }}alt="{{ with .Get "alt"}}{{.}}{{else}}{{ .Get "caption" }}{{ end }}" {{ end }}{{ with .Get "width" }}width="{{.}}" {{ end }} style="border:1px solid indigo"/>
-        </noscript>
+        <img src="/images/{{ .Get "src" }}-512.{{ .Get "type" }}" data-sizes="auto" data-srcset="/images/{{ .Get "src" }}-512.{{ .Get "type" }} 512w,/images/{{ .Get "src" }}-640.{{ .Get "type" }} 640w,/images/{{ .Get "src" }}-768.{{ .Get "type" }} 768w,/images/{{ .Get "src" }}-1024.{{ .Get "type" }} 1024w,/images/{{ .Get "src" }}-1366.{{ .Get "type" }} 1366w,/images/{{ .Get "src" }}-1600.{{ .Get "type" }} 1600w,/images/{{ .Get "src" }}-1920.{{ .Get "type" }} 1920w" {{ with .Get "width" }}width="{{.}}" {{ end }} style="border:1px solid indigo" class="lazyload" />
     {{ if .Get "link"}}</a>{{ end }}
     {{ if or (or (.Get "title") (.Get "caption")) (.Get "attr")}}
     <figcaption>{{ if isset .Params "title" }}
