--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -3,8 +3,8 @@
 <script type="text/javascript">
 
 (function() {
-    // Don't ever inject Disqus on localhost--it creates unwanted
-    // discussions from 'localhost:1313' on your Disqus account...
+    // Don't inject Disqus on localhost--it creates unwanted
+    // discussions from 'localhost:1313' on your Disqus account
     if (window.location.hostname == "localhost")
         return;
 
@@ -14,5 +14,5 @@
     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript>
 <a href="http://disqus.com/" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
