--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -725,4 +725,7 @@ ul.children.children-card {
     margin-left: -1rem;
     margin-right: -1rem; } }
 
+	hr { display: block; height: 1px;
+    border: 0; border-top: 1px solid #ccc;
+    margin: 1em 0; padding: 0; }
 /*# sourceMappingURL=style.css.map */
