played around with comment placement in footer. edited CSS.

--- a/layouts/partials/flex/body-aftercontent.html
+++ b/layouts/partials/flex/body-aftercontent.html
@@ -12,8 +12,12 @@
 
 
 <footer>
+
+<commentbox>
 <hr>
-{{ partial "disqus.html" . }}  
+{{ partial "disqus.html" . }}
+
+</commentbox>
 
 <div class="footline">
     {{if .Params.tags }}
