moved comments to their own div with reduced width.

--- a/layouts/partials/flex/body-aftercontent.html
+++ b/layouts/partials/flex/body-aftercontent.html
@@ -12,12 +12,12 @@
 
 
 <footer>
-
-<commentbox>
 <hr>
+<div class="comments">
+
 {{ partial "disqus.html" . }}
 
-</commentbox>
+</div>
 
 <div class="footline">
     {{if .Params.tags }}
