--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -551,11 +551,11 @@ h6:hover .anchor {
   margin-top: -5px;
   border-right-color: rgba(0, 0, 0, 0.8); }
 
-commentbox {
-	color: #aaa;
-	font-size: .95rem;
-	margin: 0.5rem 10rem;
-	padding: 0.25rem 4rem; }
+.comments {
+		width: 80%;
+		margin-left: auto;
+		margin-right: auto;
+}
   
 footer {
   color: #aaa;
