--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -1,18 +1,15 @@
+{{ if ne .Site.Params.disqusShortname ""}}
 
-<div id="disqus_thread"></div>
-<script type="text/javascript">
+<div class="disqus"></div>
 
-(function() {
-    // Don't inject Disqus on localhost--it creates unwanted
-    // discussions from 'localhost:1313' on your Disqus account
-    if (window.location.hostname == "localhost")
-        return;
-
-    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-    var disqus_shortname = '{{ .Site.DisqusShortname }}';
-    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-})();
+<script>
+    disqusloader( '.disqus',
+        {
+            scriptUrl: '//{{ .Site.Params.disqusShortname }}.disqus.com/embed.js',
+            disqusConfig: function () {
+                this.page.url = "{{ .Site.Params.domain }}{{ .RelPermalink }}";
+                this.page.identifier = "{{ .Site.Params.domain }}{{ .RelPermalink }}";
+            }
+        });
 </script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript>
-<a href="http://disqus.com/" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+{{ end }}
