--- a/layouts/partials/flex/head.html
+++ b/layouts/partials/flex/head.html
@@ -10,9 +10,9 @@
 {{with .Site.Params.themeVariant}}
 	<link href="{{(printf "theme-%s/variant-%s.css" ($.Site.Params.themeStyle| default "flex") .) | relURL}}" rel="stylesheet">
 {{end}}
-<script src="{{"js/jquery-2.x.min.js" | relURL}}" async></script>
-<script src="{{"js/lazysizes.min.js" | relURL}}" async=""></script>
-<script src="{{"js/disqusloader.js" | relURL}}" async=""></script>
+<script async src="{{"js/jquery-2.x.min.js" | relURL}}"></script>
+<script async src="{{"js/lazysizes.min.js" | relURL}}"></script>
+<script async src="{{"js/disqusloader.js" | relURL}}"></script>
 
 <link rel="stylesheet" href="{{"css/bootstrap.min.css" | relURL}}">
 
