--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -551,7 +551,7 @@ h6:hover .anchor {
   margin-top: -5px;
   border-right-color: rgba(0, 0, 0, 0.8); }
 
-.disqus {
+.comments {
 		width: 80%;
 		margin-left: auto;
 		margin-right: auto;
