--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -1,7 +1,32 @@
+<script>
+$(function(){
+$('#show-comments').on('click', function(){
+var disqus_shortname = '{{.Site.DisqusShortname}}';
 
-<div class="disqus"></div>
-<script src="{{"js/disqusloader.js" | relURL}}"></script>
+(function() {
+var disqus = document.createElement('script');
+disqus.type = 'text/javascript';
+disqus.async = true;
+disqus.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(disqus);
+})();
+
+$(this).hide(); // Hide the button
+});
+});
+</script>
+
+<script id="dsq-count-scr" src="//{{.Site.DisqusShortname}}.disqus.com/count.js" async=""></script>
+
+<div class="disqus-comments">
+<button id="show-comments" class="btn btn-default" type="button">Show <span class="disqus-comment-count" data-disqus-url="{{ trim .Permalink "/" }}">comments</span></button>
+
+<div id="disqus_thread">
+</div>
 
 <script type="text/javascript">
-    disqusloader( '.disqus',{scriptUrl: '//{{ .Site.Params.disqusShortname }}.disqus.com/embed.js'});
+var disqus_config = function () {
+this.page.url = '{{ trim .Permalink "/" }}';
+};
 </script>
+</div>
