Removed number of comments from load button for now

--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -16,10 +16,11 @@ $(this).hide(); // Hide the button
 });
 </script>
 
-<script id="dsq-count-scr" src="//{{.Site.DisqusShortname}}.disqus.com/count.js" async=""></script>
+<!--<script id="dsq-count-scr" src="//{{.Site.DisqusShortname}}.disqus.com/count.js" async=""></script>-->
 
 <div class="disqus-comments">
-<button id="show-comments" class="btn btn-default" type="button">Show <span class="disqus-comment-count" data-disqus-url="{{ trim .Permalink "/" }}">comments</span></button>
+<!--<button id="show-comments" class="btn btn-default" type="button">Load <span class="disqus-comment-count" data-disqus-url="{{ trim .Permalink "/" }}">Comments</span></button>-->
+<button id="show-comments" class="btn btn-default" type="button">Load Comments</span></button>
 
 <div id="disqus_thread">
 </div>
