Changed font to Verdana, slimmed down the main page text, spruced up the looks a bit overall.

--- a/layouts/partials/flex/body-aftercontent.html
+++ b/layouts/partials/flex/body-aftercontent.html
@@ -13,9 +13,9 @@
 
 <footer>
 <hr>
-
+<center>
 <div class="comments">{{ partial "disqus.html" . }}</div>
-
+</center>
 <br>
 
 <div class="footline">
