--- a/public/theme-flex/style.css
+++ b/public/theme-flex/style.css
@@ -302,9 +302,9 @@ article section.page {
   -ms-flex: 1;
   flex: 1;
   box-sizing: border-box;
-  margin: 0 5rem 0 25rem;
+  margin: 0 11rem 0 31rem;
   overflow-y: auto;
-  padding: 2rem 11rem 0rem 11rem; }
+  padding: 2rem 4rem 0rem 4rem; }
   article section.page h1:first-of-type {
     margin: 3rem 0rem;
     font-family: "Verdana", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
@@ -313,11 +313,13 @@ article section.page {
     color: #060606;
     font-weight: 200;
     font-size: 3.25rem;
-    line-height: 2.7rem; }
+    line-height: 3.7rem; }
   article section.page h1 {
-    margin-top: 4rem; }
+    margin-top: 4rem;
+	line-height: 2.7rem;	}
   article section.page h2 {
-    margin-top: 3rem; }
+    margin-top: 3rem;
+	line-height: 2.7rem;	}
   article section.page table {
     width: 100%;
     margin-bottom: 2em;
@@ -562,7 +564,7 @@ h6:hover .anchor {
 footer {
   color: #aaa;
   font-size: .95rem;
-  margin: 0 1rem 0.5rem 20rem;
+  margin: 0 0rem 0.5rem 20rem;
   padding: 0.25rem 4rem; }
   footer p {
     margin: 0px; }
@@ -676,13 +678,25 @@ ul.children.children-card {
     ul.children.children-card > span p {
       padding: 0rem 1rem; }
 
-@media (max-width: 1024px) {
-  section {
-    margin-right: 0; }
+	  
+@media (max-width: 1600px) {
+  article >section.page {
+    margin: 0 7rem 0 27rem;
+    padding: 1rem 2rem; }
+	
+	  section {
+    margin: 0;
+    padding: 1rem 2rem; }	  
+@media (max-width: 1200px) {
+  article >section.page {
+    margin: 0 3rem 0 23rem;
+    padding: 1rem 2rem; }
+	
+	  section {
+    margin: 0;
+    padding: 1rem 2rem; }
 
-  section > .toc {
-    display: none; } }
-@media (max-width: 768px) {
+@media (max-width: 960px) {
   article {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -693,10 +707,11 @@ ul.children.children-card {
     display: none; }
 
   footer {
-    display: none; }
+    margin: 0 1rem 0 1rem;
+	padding: 1rem;  }
 
   article > section.page {
-    margin: 0 0;
+    margin: 0 2rem 0 2rem;
     padding: 1rem; }
 
   article > section.page #navigation label {
